Fix flickering bug by using correct mouseleave event

--- a/keyboard.css
+++ b/keyboard.css
@@ -11,6 +11,7 @@
 
 .virtual_keyboard_toggle {
   padding: 5px;
+  visibility: hidden;
 }
 
 .virtual_keyboard {
